--- a/Project/android/AndroidManifest.xml
+++ b/Project/android/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.mygdx.game" >
 
     <application
+        android:hardwareAccelerated="true"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:isGame="true"
