i am fixed bugs!

--- a/Project/android/AndroidManifest.xml
+++ b/Project/android/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:label="@string/app_name"
         android:theme="@style/GdxTheme" >
         <activity
-            android:name="com.mygdx.game.AndroidLauncher"
+            android:name="com.mygdx.robotlegend.AndroidLauncher"
             android:label="@string/app_name" 
             android:screenOrientation="landscape"
             android:configChanges="keyboard|keyboardHidden|navigation|orientation|screenSize|screenLayout">
