--- a/Project/android/build.gradle
+++ b/Project/android/build.gradle
@@ -17,7 +17,7 @@ android {
         exclude 'META-INF/robovm/ios/robovm.xml'
     }
     defaultConfig {
-        applicationId "com.mygdx.game"
+        applicationId "com.mygdx.robotlegend"
         minSdkVersion 14
         targetSdkVersion 30
         versionCode 1
@@ -83,7 +83,7 @@ task run(type: Exec) {
     }
 
     def adb = path + "/platform-tools/adb"
-    commandLine "$adb", 'shell', 'am', 'start', '-n', 'com.mygdx.game/com.mygdx.game.AndroidLauncher'
+    commandLine "$adb", 'shell', 'am', 'start', '-n', 'com.mygdx.robotlegend/com.mygdx.robotlegend.AndroidLauncher'
 }
 
 dependencies {
